# Mathex

./: .gitignore  CMakeLists.txt
original/: CMakeLists.txt  mathtex.c  mathtex.html
src/: mathex.cpp  mathex.h  mathex_global.h  mathex_latex.cpp  mathex_log.cpp  mathex_main.cpp  mathex_main.h  mathex_md5.cpp  mathex_resources.h  mathex_string.h  mathex_time.cpp  mathex_util.cpp  mathex_util.h
testcgi/: test.c  test.cgi
